--- a/roles/deploiement/templates/www/index.html
+++ b/roles/deploiement/templates/www/index.html
@@ -1,5 +1,5 @@
 <html>
    <body> 
-       <h1>Bonjour, je suis sur l'environnement {{ env_name }}.</h1>
+       <h1>Bonjour!, je suis sur l'environnement {{ env_name }}.</h1>
    </body>
 </html>
